--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sistema-Laudo (Principal)</title>
+  <title>SI - Sistema de Informação . Laudos.</title>
 
   <style>
     :root{
-      --blue1:#0d3a66;
-      --blue2:#1b5fa3;
-      --panel: rgba(255,255,255,0.96);
-      --panel2: rgba(255,255,255,0.82);
-      --border:#c7d7e6;
-      --shadow: 0 10px 30px rgba(0,0,0,.12);
+      --bg1:#061b2d;
+      --bg2:#0a2d45;
+      --bg3:#04304f;
+
+      --glass: rgba(255,255,255,.08);
+      --glass2: rgba(255,255,255,.05);
+      --stroke: rgba(255,255,255,.14);
+      --stroke2: rgba(255,255,255,.10);
+
+      --text:#eaf2ff;
+      --muted: rgba(234,242,255,.78);
+
+      --shadow: 0 18px 60px rgba(0,0,0,.30);
+      --shadow2: 0 10px 25px rgba(0,0,0,.20);
+
+      --ok:#22c55e;
     }
 
     *{ box-sizing:border-box; }
@@ -20,155 +30,40 @@
     body{
       margin:0;
       font-family: Arial, sans-serif;
-      background:
-        radial-gradient(1200px 600px at 10% 10%, rgba(255,255,255,.20), transparent 50%),
-        radial-gradient(900px 500px at 90% 30%, rgba(255,255,255,.18), transparent 55%),
-        linear-gradient(135deg, var(--blue1), var(--blue2));
       min-height:100vh;
-
-      /* espaço para roteiro fixo */
-      padding-top: 54px;
-    }
-
-    /* ===========================
-       TOPO (LOGO + TITULO)
-    =========================== */
-    header{
+      color: var(--text);
+      padding-top: 56px;
+      background:
+        radial-gradient(1200px 700px at 70% 10%, rgba(255,255,255,.06), transparent 55%),
+        radial-gradient(900px 600px at 10% 20%, rgba(255,255,255,.04), transparent 50%),
+        linear-gradient(135deg, var(--bg1), var(--bg2) 45%, var(--bg3));
       position: relative;
-      padding: 16px 22px 8px;
-      color: #fff;
+      overflow-x: hidden;
     }
 
-    .topbar{
-      display:flex;
-      align-items:center;
-      gap:14px;
-      flex-wrap:wrap;
+    /* watermark do logo */
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background: url("logo/sesctopo.png") center 78% / min(820px, 92vw) no-repeat;
+      opacity: 0.09; /* intensidade */
+      pointer-events: none;
+      z-index: 0;
     }
 
-    .logoBox{
-      width:46px;
-      height:46px;
-      border-radius:12px;
-      background: rgba(255,255,255,.15);
-      border: 1px solid rgba(255,255,255,.20);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-weight: 900;
-      letter-spacing: .5px;
-      box-shadow: 0 6px 20px rgba(0,0,0,.15);
-      user-select:none;
+    body::after{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background: linear-gradient(180deg, rgba(0,0,0,.10), rgba(0,0,0,.35));
+      pointer-events: none;
+      z-index: 0;
     }
 
-    h1{
-      margin:0;
-      font-size: 36px;
-      line-height: 1.1;
-      letter-spacing: .3px;
-      text-shadow: 0 8px 20px rgba(0,0,0,.18);
-    }
+    header, main, #roteiroTopo{ position: relative; z-index: 1; }
 
-    /* ===========================
-       CONTEUDO
-    =========================== */
-    .wrap{
-      width:min(1100px, 96vw);
-      margin: 10px auto 40px;
-      background: var(--panel2);
-      border: 1px solid rgba(255,255,255,.22);
-      border-radius: 18px;
-      box-shadow: var(--shadow);
-      padding: 18px;
-    }
-
-    .card{
-      background: var(--panel);
-      border-radius: 16px;
-      border: 1px solid var(--border);
-      padding: 16px;
-    }
-
-    .titleSec{
-      font-weight: 900;
-      color:#0d3a66;
-      font-size: 20px;
-      margin: 2px 0 14px;
-      text-transform: uppercase;
-    }
-
-    textarea{
-      width:100%;
-      min-height: 240px;
-      resize: vertical;
-      border:1px solid #cfdceb;
-      border-radius: 14px;
-      padding: 14px;
-      font-size: 15px;
-      outline:none;
-    }
-    textarea:focus{
-      border-color:#2c7bd6;
-      box-shadow: 0 0 0 3px rgba(44,123,214,.15);
-    }
-
-    .btn{
-      margin-top: 14px;
-      width:100%;
-      border:none;
-      border-radius: 14px;
-      padding: 16px 16px;
-      font-size: 22px;
-      font-weight: 900;
-      color:#fff;
-      cursor:pointer;
-      background: linear-gradient(90deg, #0aa34f, #08c25a);
-      box-shadow: 0 12px 25px rgba(10,163,79,.28);
-    }
-    .btn:hover{ filter: brightness(1.03); }
-
-    .checks{
-      margin-top: 10px;
-      font-size: 15px;
-      color:#1e2b37;
-      display:grid;
-      gap:6px;
-    }
-
-    .grid{
-      display:grid;
-      gap: 14px;
-      grid-template-columns: 1fr 260px;
-      margin-top: 18px;
-    }
-    @media(max-width:820px){
-      .grid{ grid-template-columns: 1fr; }
-    }
-
-    label{
-      font-weight: 800;
-      color:#0d3a66;
-      margin-bottom: 6px;
-      display:block;
-    }
-
-    input{
-      width:100%;
-      padding: 12px 12px;
-      border-radius: 12px;
-      border:1px solid #cfdceb;
-      outline:none;
-      font-size: 15px;
-      background:#fff;
-    }
-    input:focus{
-      border-color:#2c7bd6;
-      box-shadow: 0 0 0 3px rgba(44,123,214,.15);
-    }
-
-    /* ===========================
-       ROTEIRO FIXO (igual sua imagem)
-    =========================== */
+    /* roteiro */
     #roteiroTopo{
       position: fixed;
       top: 0;
@@ -177,43 +72,214 @@
       z-index: 999999;
       padding: 10px 14px;
       font-size: 13px;
-      color: #e9f3ff;
-      background: rgba(20, 40, 60, 0.60);
-      border-bottom: 1px solid rgba(255,255,255,0.14);
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
+      color: rgba(234,242,255,.92);
+      background: rgba(3,14,24,.55);
+      border-bottom: 1px solid rgba(255,255,255,.10);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
     }
-    #roteiroTopo .linha{
-      display:flex;
-      align-items:center;
-      flex-wrap:wrap;
-      gap: 6px;
-    }
-    #roteiroTopo .rotulo{
-      opacity:.9;
-      font-weight: 900;
-      letter-spacing: .2px;
-      margin-right: 6px;
-    }
+    #roteiroTopo .linha{ display:flex; align-items:center; flex-wrap:wrap; gap:6px; }
+    #roteiroTopo .rotulo{ font-weight: 900; opacity:.95; margin-right:6px; }
     #roteiroTopo .item{
       padding: 3px 10px;
       border-radius: 999px;
-      background: rgba(255,255,255,0.10);
-      border: 1px solid rgba(255,255,255,0.12);
+      background: rgba(255,255,255,.07);
+      border: 1px solid rgba(255,255,255,.12);
       white-space: nowrap;
-      font-weight: 700;
+      font-weight: 800;
     }
-    #roteiroTopo .sep{
-      opacity:.55;
+    #roteiroTopo .sep{ opacity:.55; font-weight:900; margin: 0 2px; }
+
+    /* header */
+    header{ padding: 18px 22px 10px; }
+    .topbar{
+      display:flex;
+      align-items:center;
+      justify-content: space-between;
+      gap: 18px;
+      flex-wrap:wrap;
+    }
+    .brand{ display:flex; align-items:center; gap: 14px; }
+    .logoBox{
+      width:64px;
+      height:64px;
+      border-radius: 18px;
+      background: rgba(255,255,255,.06);
+      border: 1px solid rgba(255,255,255,.14);
+      box-shadow: var(--shadow2);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      overflow:hidden;
+      padding: 10px;
+    }
+    .logoBox img{
+      width:100%;
+      height:100%;
+      object-fit: contain;
+      display:block;
+      filter: drop-shadow(0 10px 18px rgba(0,0,0,.25));
+    }
+    .titulos h1{
+      margin:0;
+      font-size: 34px;
+      letter-spacing: .3px;
+      line-height: 1.06;
+      text-shadow: 0 10px 22px rgba(0,0,0,.25);
+    }
+    .subtitulo{
+      margin-top: 5px;
       font-weight: 900;
-      margin: 0 2px;
+      font-size: 15px;
+      opacity: 0.95;
+      letter-spacing: .6px;
+      color: rgba(234,242,255,.92);
+    }
+
+    /* botões topo */
+    .topActions{ display:flex; gap:10px; flex-wrap:wrap; }
+    .pill{
+      border: 1px solid rgba(255,255,255,.18);
+      background: rgba(255,255,255,.06);
+      color: rgba(234,242,255,.92);
+      padding: 10px 14px;
+      border-radius: 999px;
+      font-weight: 900;
+      cursor:pointer;
+      box-shadow: var(--shadow2);
+      backdrop-filter: blur(6px);
+      -webkit-backdrop-filter: blur(6px);
+    }
+    .pill:hover{ filter: brightness(1.06); }
+    .pill.on{
+      border-color: rgba(34,197,94,.40);
+      box-shadow: 0 12px 30px rgba(0,0,0,.22), 0 0 0 3px rgba(34,197,94,.10);
+    }
+
+    /* cards vidro */
+    main{
+      width:min(1100px, 96vw);
+      margin: 10px auto 45px;
+      display:grid;
+      gap: 16px;
+    }
+    .glassCard{
+      background: linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.06));
+      border: 1px solid rgba(255,255,255,.14);
+      border-radius: 22px;
+      box-shadow: var(--shadow);
+      padding: 18px;
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+    }
+    .row{
+      display:flex;
+      align-items:center;
+      justify-content: space-between;
+      gap: 12px;
+      flex-wrap:wrap;
+    }
+    .sectionTitle{
+      font-weight: 900;
+      letter-spacing: 1.2px;
+      text-transform: uppercase;
+      opacity: .95;
+    }
+    .chip{
+      border: 1px solid rgba(255,255,255,.18);
+      background: rgba(255,255,255,.06);
+      padding: 10px 14px;
+      border-radius: 999px;
+      font-weight: 900;
+      color: rgba(234,242,255,.92);
+      min-width: 98px;
+      text-align:center;
+    }
+    .desc{ margin-top: 10px; color: var(--muted); font-weight: 700; }
+
+    .grid2{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 14px;
+      margin-top: 16px;
+    }
+    @media (max-width:820px){
+      .grid2{ grid-template-columns: 1fr; }
+    }
+    .box{
+      background: rgba(255,255,255,.05);
+      border: 1px solid rgba(255,255,255,.12);
+      border-radius: 18px;
+      padding: 16px;
+      box-shadow: var(--shadow2);
+    }
+    .box small{ color: var(--muted); font-weight: 800; letter-spacing: 1px; }
+    .box b{ display:block; font-size: 30px; margin-top: 8px; }
+
+    /* textarea e botão */
+    textarea{
+      width:100%;
+      min-height: 220px;
+      resize: vertical;
+      border-radius: 18px;
+      border: 1px solid rgba(255,255,255,.18);
+      background: rgba(255,255,255,.07);
+      color: rgba(234,242,255,.95);
+      padding: 14px;
+      font-size: 15px;
+      outline: none;
+      box-shadow: var(--shadow2);
+    }
+    textarea::placeholder{ color: rgba(234,242,255,.55); }
+    textarea:focus{
+      border-color: rgba(34,197,94,.40);
+      box-shadow: 0 0 0 3px rgba(34,197,94,.12), var(--shadow2);
+    }
+    .btn{
+      width:100%;
+      margin-top: 14px;
+      border:none;
+      border-radius: 18px;
+      padding: 16px;
+      font-size: 20px;
+      font-weight: 900;
+      cursor:pointer;
+      color:#082012;
+      background: linear-gradient(90deg, #22c55e, #16a34a);
+      box-shadow: 0 18px 35px rgba(34,197,94,.25);
+    }
+    .btn:hover{ filter: brightness(1.05); }
+
+    /* inputs */
+    .formRow{
+      display:grid;
+      grid-template-columns: 1fr 260px;
+      gap: 14px;
+      margin-top: 14px;
+    }
+    @media(max-width:820px){
+      .formRow{ grid-template-columns: 1fr; }
+    }
+    label{ font-weight: 900; letter-spacing:.5px; }
+    input{
+      width:100%;
+      padding: 12px 12px;
+      border-radius: 14px;
+      border: 1px solid rgba(255,255,255,.18);
+      background: rgba(255,255,255,.07);
+      color: rgba(234,242,255,.95);
+      outline: none;
+    }
+    input:focus{
+      border-color: rgba(34,197,94,.40);
+      box-shadow: 0 0 0 3px rgba(34,197,94,.12);
     }
   </style>
 </head>
 
 <body>
 
-  <!-- ✅ ROTEIRO FIXO BONITO NO TOPO -->
+  <!-- roteiro fixo -->
   <div id="roteiroTopo">
     <div class="linha">
       <span class="rotulo">Ordem:</span>
@@ -229,35 +295,62 @@
     </div>
   </div>
 
-  <!-- TOPO COM LOGO -->
   <header>
     <div class="topbar">
-      <div class="logoBox">SL</div>
-      <h1>Sistema de Laudos</h1>
+      <div class="brand">
+        <div class="logoBox">
+          <img src="logo/logotipo.png" alt="Logotipo" />
+        </div>
+        <div class="titulos">
+          <h1>Sistema de Laudos</h1>
+          <div class="subtitulo">SI - Sistema de Informação . Laudos.</div>
+        </div>
+      </div>
+
+      <div class="topActions">
+        <button class="pill on" id="btnProf">Modo Profissional</button>
+        <button class="pill on" id="btnPopupCentral">Popup Central</button>
+      </div>
     </div>
   </header>
 
-  <main class="wrap">
-    <section class="card">
-      <div class="titleSec">Digitação rápida</div>
+  <main>
+    <!-- STATUS -->
+    <section class="glassCard">
+      <div class="row">
+        <div class="sectionTitle">STATUS DO SISTEMA</div>
+        <div class="chip">Online</div>
+      </div>
+      <div class="desc">Laudo abre em janela central (compacta). Se popup for bloqueado, abre na mesma aba.</div>
 
-      <!-- ❌ REMOVIDO: Card “Guia Permanente” que repetia o roteiro -->
+      <div class="grid2">
+        <div class="box">
+          <small>JANELA</small>
+          <b id="txtJanela">Central</b>
+        </div>
+        <div class="box">
+          <small>TAMANHO</small>
+          <b id="txtTam">Compacto</b>
+        </div>
+      </div>
+    </section>
+
+    <!-- DIGITAÇÃO -->
+    <section class="glassCard">
+      <div class="sectionTitle">DIGITAÇÃO RÁPIDA</div>
+      <div class="desc" style="margin-top:8px;">
+        Cole os dados do paciente e clique para extrair e abrir o laudo.
+      </div>
 
       <textarea id="textoDigitacao" placeholder="Cole aqui os dados do paciente conforme a ordem acima..."></textarea>
 
       <button class="btn" id="btnExtrair">EXTRAIR AUTOMATICAMENTE E ABRIR LAUDO</button>
 
-      <div class="checks">
-        <div>✅ Última linha pode ser: SNM ou EAM (Responsável).</div>
-        <div>✅ O nome não quebra: o exame é detectado por padrão 000156/2026.</div>
-      </div>
-
-      <div class="grid">
+      <div class="formRow">
         <div>
           <label>Paciente</label>
           <input id="nome" placeholder="NOME COMPLETO"/>
         </div>
-
         <div>
           <label>Nº Exame</label>
           <input id="exame" placeholder="000156/2026"/>
@@ -269,12 +362,57 @@
   <script>
     const $ = (id)=>document.getElementById(id);
 
+    // ✅ CONFIG: caminho do laudo
+    const LAUDO_URL = "laudo.html"; // <- TROQUE se o arquivo tiver outro nome
+
+    // Estados
+    let modoProfissional = true;
+    let popupCentral = true;
+
+    // Exame: aceita 000156/2026 ou 000156.2026 ou 000156-2026
     function detectarExame(texto){
-      // aceita 000156/2026 ou 000156.2026 ou 000156-2026
       const m = texto.match(/(\d{3,6})\s*[\/\.\-]\s*(\d{4})/);
       if(!m) return "";
       return `${m[1].padStart(6,"0")}/${m[2]}`;
     }
+
+    // ✅ abre popup central/compacto e com fallback
+    function abrirLaudoPopout(params){
+      const query = new URLSearchParams(params).toString();
+      const url = `${LAUDO_URL}?${query}`;
+
+      // tamanho compacto
+      const w = 980;
+      const h = 720;
+
+      // posição central
+      const left = Math.max(0, (window.screen.width - w) / 2);
+      const top  = Math.max(0, (window.screen.height - h) / 2);
+
+      let features = `width=${w},height=${h},left=${left},top=${top},resizable=yes,scrollbars=yes`;
+
+      const win = window.open(url, "LAUDO_POPUP", features);
+
+      // fallback se bloqueado
+      if (!win || win.closed || typeof win.closed === "undefined") {
+        window.location.href = url;
+        return;
+      }
+
+      win.focus();
+    }
+
+    // Botões do topo
+    $("btnProf").addEventListener("click", () => {
+      modoProfissional = !modoProfissional;
+      $("btnProf").classList.toggle("on", modoProfissional);
+    });
+
+    $("btnPopupCentral").addEventListener("click", () => {
+      popupCentral = !popupCentral;
+      $("btnPopupCentral").classList.toggle("on", popupCentral);
+      $("txtJanela").textContent = popupCentral ? "Central" : "Normal";
+    });
 
     $("btnExtrair").addEventListener("click", ()=>{
       const texto = $("textoDigitacao").value.trim();
@@ -290,7 +428,16 @@
       $("nome").value = nome;
       if(exame) $("exame").value = exame;
 
-      alert("Extraído! (Modelo)\n\nAgora você já tem o roteiro FIXO bonito no topo.");
+      // ✅ envia dados pro laudo
+      const params = {
+        nome: nome,
+        exame: exame || $("exame").value || "",
+        modo: modoProfissional ? "prof" : "simples",
+        origem: "principal"
+      };
+
+      if (popupCentral) abrirLaudoPopout(params);
+      else window.location.href = `${LAUDO_URL}?${new URLSearchParams(params).toString()}`;
     });
   </script>
 </body>
